# IT-ServiceDesk-Agent-Foundry

./: .aifignore  .env.example  .gitignore  AZURE_DEPLOYMENT.md  PROJECT_COMPLETION.md  PROJECT_STATUS.md  PROJECT_STATUS_REAL.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  agent.yaml  deploy.ps1  pyproject.toml  requirements.txt
archive/: README_REAL.md.old  micro_agent_system.py.old  simple_agent_system.py.old
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  SECURITY.md
examples/: demo_usage.py
integration_tests/: README.md  test_real_integrations.py
src/: agent.py  agent_entrypoint.py  config.py  multi_agent_system.py
src/agents/: __init__.py  ad_agent.py  base_agent.py  graph_agent.py  intune_agent.py  knowledge_agent.py  orchestrator.py  servicenow_agent.py  technician_assistant_agent.py
src/agents/device/: __init__.py
src/agents/identity/: __init__.py
src/agents/orchestration/: __init__.py  master_orchestrator.py  workflow_coordinator.py
src/agents/security/: __init__.py
src/agents/ticketing/: __init__.py
src/it_service_desk_agent/: __init__.py  config.py  entrypoint.py  secrets.py
src/it_service_desk_agent/agents/: __init__.py  device_agent.py  identity_agent.py  ticket_agent.py
src/it_service_desk_agent/core/: __init__.py  agent.py  models.py
src/it_service_desk_agent/integrations/: base_http.py  microsoft_graph.py  powershell.py  servicenow.py
src/it_service_desk_agent/orchestration/: router.py
src/it_service_desk_agent/security/: audit.py  policy.py  registry.py
src/it_service_desk_agent/tools/: __init__.py  active_directory.py  graph_user.py  intune_tools.py  servicenow_tools.py
src/knowledge/: search.py
src/tools/: active_directory.py  intune.py  microsoft_graph.py  powershell.py  servicenow.py
src/utils/: audit.py  logging.py  validation.py
tests/: test_real_integrations.py  test_router.py  test_security.py
